Forced a scrollbar in the browser to stop it causes a horizontal 'jump'. Changed hovering over the expand_all button to only put shadows on div that it will affect.

--- a/cv.css
+++ b/cv.css
@@ -6,6 +6,7 @@
 
 html {
   background:           white;
+  overflow-y:           scroll;
 }
 
 body {
